<resources>
    <string name="app_name">Ninos App</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="challenge">Challenge</string>
    <string name="challenges">Challenges</string>
    <string name="dismiss">Dismiss</string>
    <string name="network_down">No network connection!</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="error_message">Something Wrong, Please Try Again</string>
    <string name="follow">Follow</string>
    <string name="dummy_text">A garden to walk in and immensity to dream in what more could he ask? a few flowers at his feet and above himthe stars</string>
    <string name="applause">Applause</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="playservice_error">Google Play Services error.</string>
    <string name="child_name">Child Name</string>
    <string name="date_of_birth">Child Date of Birth</string>
    <string name="enter_child_name">Enter child name</string>
    <string name="select_dob">Select date of birth</string>
    <string name="rationale_storage">This app needs External Storage permission to select photos and videos.</string>
    <string name="rationale_storage_ask_again">This app needs External Storage permission to select photos and videos. Open the app settings screen to modify app permissions.</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="app_exit_msg">Press back again to exit Ninos app</string>
    <string name="cancel">Cancel</string>
    <string name="select_count">Select (%d)</string>
    <string name="select">Select</string>
    <string name="loading_image_upload">Uploading …</string>
    <string name="s_clap">%d Clap</string>
    <string name="s_claps">%d Claps</string>
    <string name="s_comments">%d Comments</string>
    <string name="s_comment">%d Comment</string>
    <string name="done">Done</string>
    <string name="about">About…</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="profile_aws_url_suffix_PI64">/PI64.png</string>
    <string name="profile_aws_url_suffix_PI192">/PI192.png</string>
    <string name="comments">Comments</string>
    <string name="leave_a_comment">Leave a comment…</string>
    <string name="comment_validation">Comment is empty</string>
    <string name="fb_login_protocol_scheme">fb2021224038166624</string>
    <string name="save">Save</string>
    <string name="Ok">OK</string>
    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="label_select_video">Select Video</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="video_saved_at">Video saves at : $%1s</string>
    <string name="pick_a_video">Select or record a a video below to try it out:</string>
    <string name="trimming_progress">Trimming your video…</string>
    <string name="file_size_is_too_large">File Size is too large.</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="search">Search…</string>
    <string name="people">People</string>
    <string name="search_keyword_is_empty">Search keyword is empty</string>
    <string name="unable_to_find_the_user_for_s">Oops! No People found with \'%s\'</string>
    <string name="unable_to_find_the_post_for_s">Oops! No Post found with \'%s\'</string>
    <string name="unable_to_find_the_challenges_for_s">Oops! No Challenges found with \'%s\'</string>
    <string name="edit">Edit</string>
    <string name="report">Report</string>
    <string name="reason_for_report">Reason for report</string>
    <string name="provide_reason_for_report">Provide reason for report</string>
    <string name="cannot_delete_image">Cannot delete image or video</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_network">No network</string>
    <string name="try_again">Try again?</string>
    <string name="edit_name">Edit Child Name</string>
    <string name="instagram">Instagram</string>
    <string name="device_not_supported">Device not supported.</string>
    <string name="points">Points</string>
    <string name="quiz">Quiz</string>
    <string name="instructions">Instructions</string>
    <string name="start">Start Quiz</string>
    <string name="exit_quiz">Exit quiz?</string>
    <string name="exit_quiz_message">Quiz progress will be lost.</string>
    <string name="offensive_words">Text contains offensive words.</string>
    <string name="accept">Accept</string>
    <string name="notifications">Notifications</string>
    <string name="starting_quiz">Starting quiz…</string>
    <string name="your_score">Your Score</string>
    <string name="_0">00</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="school">School</string>
    <string name="gender">Gender</string>
    <string name="state">State</string>
    <string name="male_female">Male or Female</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city">City</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="error_update_profile">Error occurred while updating profile</string>
    <string name="social">Social</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="invite">Invite Friends</string>
    <string name="rate_us">Rate us on play store</string>
    <string name="twitter">Twitter</string>
    <string name="contact">Contact</string>
    <string name="feed_back">Feedback</string>
    <string name="about_us">About us</string>
    <string name="policies">Policies</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=in.ninos</string>
    <string name="invite_text">Hey! I\'ve found the best app to showcase children\'s talent.\nDisplay children\'s Talent, Play Quizzes, Challenges &amp; Win PRIZES EVERY WEEK.\nDownload NinosApp Kids Talent App.\nhttps://play.google.com/store/apps/details?id=in.ninos</string>
    <string name="send_email_using">Send email using…</string>
    <string name="_2_you_will_be_awarded_2_points_for_every_correct_answer_there_are_no_negative_points_for_wrong_answers">You will be awarded 2 points for every correct answer. There are NO negative points for wrong answers.</string>
    <string name="_1_the_quizzes_are_carefully_designed_to_educate_entertain_you"><![CDATA[The quizzes are carefully designed to educate & entertain you.]]></string>
    <string name="_3_the_timer_is_set_once_you_start_the_quiz">The timer is set once you start the quiz.</string>
    <string name="_4_you_can_change_answers_any_number_of_times_within_the_time_limit">You can change answers any number of times within the time limit.</string>
    <string name="_5_you_can_attempt_one_quiz_only_once_however_you_can_always_view_questions_answers_of_attempted_quizzes"><![CDATA[You can attempt one quiz only once. However, you can always view questions & answers of attempted quizzes.]]></string>
    <string name="submitted_challenges">Submitted Challenges</string>
    <string name="good_luck">Good Luck!</string>
    <string name="claps">Claps</string>
    <string name="share_to">Share to…</string>
    <string name="unfollow">Unfollow</string>
    <string name="delete">Delete</string>
    <string name="_00">00</string>
    <string name="empty_following">You are following none</string>
    <string name="empty_follower">You have no followers</string>
    <string name="share_post"> has shared you a post from Ninos App. Click the following link to open it.   \n\nhttp://ninosapp.in/post/?postId=</string>
    <string name="encorage">\n\n Encourage children\'s talent &amp; creativity on Ninos App.</string>
    <string name="mail_us_dob_edit">For DOB change mail us info@ninosapp.in</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="no_quiz_in_this_category">No quiz in this category</string>
    <string name="search_prompt_description">Search People, Posts and Challenges</string>
    <string name="add_post">Add Talent</string>
    <string name="add_post_prompt_description">Upload your talent here…</string>
    <string name="challenges_prompt_description">Take up exciting challenges here!</string>
    <string name="welcome">Welcome</string>
    <string name="add_welcome_prompt_description">Click home button to continue</string>
    <string name="notifications_prompt_description">Check out all the notifications!</string>
    <string name="summary">Quiz Summary</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="when_you_report_you_cannot_see_this_post_again">When you report, you cannot see this post again!</string>
    <string name="see_who_s_commenting">See who\'s commenting…</string>
    <string name="delete_image_will_delete_post">Deleting this Image or video will delete the post</string>
    <string name="i_accept_the_terms_and_conditions_privacy_and_content_policy">I accept the Terms and Conditions, Privacy and Content Policy</string>
    <string name="accept_terms_conditons">Please accept terms and conditions.</string>
    <string name="email_already_registered">An account already exists with the same email address but with Google credentials. Sign in using Google associated with this email address.</string>
    <string name="delete_comment">Delete comment?</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="comment_is_empty">Comment is empty</string>
    <string name="type_your_comment_here">Type your comment here</string>
    <string name="ago">%d hr ago</string>
    <string name="ago_min">%d min ago</string>
    <string name="add_profile_pic">Add a profile pic</string>
    <string name="please_read_the_following_policies_at">Please read the following policies at</string>
    <string name="terms_of_usage_privacy_policy_content_policy"> * Terms of Usage\n* Privacy Policy\n* Content Policy</string>
    <string name="policy_link">http://ninosapp.in/policies/</string>
    <string name="your_quizzes">Your Quizzes</string>
    <string name="your_challenges">Your Challenges</string>
    <string name="how_is_your_experience_with_us">Please take a moment to rate us. Thanks for your support!</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="rate_us_now">Rate Us!</string>
    <string name="you_will_be_blocked_if_you_upload_bad_abusive_offensive_violent_pictures_or_videos_or_comments">\u2022 You will be blocked if you upload bad, abusive, offensive, violent pictures or videos or comments.</string>
    <string name="your_post_should_display_talent">\u2022 Your post should display talent.</string>
    <string name="make_this_app_a_safe_place_for_children">\u2022 Make this app a safe place for children.</string>
    <string name="valid_age">Child age must be less than 18</string>
    <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="urls_not_allowed">Urls not allowed in comments</string>
</resources>