<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:minHeight="350dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_nav_logo" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8dp"
        android:padding="@dimen/margin8dp"
        android:text="@string/please_read_the_following_policies_at"
        android:textColor="@color/clouds"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_policy_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_link"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin8dp"
        android:text="@string/terms_of_usage_privacy_policy_content_policy"
        android:textColor="@color/clouds"
        android:textSize="16sp" />

</LinearLayout>