<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin16dp">

        <ImageView
            android:id="@+id/iv_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_flat_report" />

        <EditText
            android:id="@+id/et_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_report"
            android:layout_marginTop="@dimen/margin16dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/reason_for_report"
            android:padding="@dimen/margin16dp"
            android:textColor="@color/midnight_blue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_report"
            android:layout_marginBottom="@dimen/margin4dp"
            android:layout_marginTop="@dimen/margin16dp"
            android:orientation="horizontal">


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:theme="@style/ButtonThemeWhite" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_report"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/report"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:theme="@style/ButtonThemeReport" />

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>
