<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_nav_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:paddingBottom="@dimen/margin16dp"
        android:paddingEnd="@dimen/margin16dp"
        android:paddingStart="@dimen/margin16dp"
        android:text="@string/how_is_your_experience_with_us"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/margin16dp"
        android:weightSum="5">

        <ImageView
            android:id="@+id/iv_star1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_star" />

        <ImageView
            android:id="@+id/iv_star2"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_star" />

        <ImageView
            android:id="@+id/iv_star3"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_star" />

        <ImageView
            android:id="@+id/iv_star4"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_star" />

        <ImageView
            android:id="@+id/iv_star5"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin8dp"
        android:layout_marginEnd="@dimen/margin16dp"
        android:layout_marginStart="@dimen/margin16dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_later"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="@dimen/margin16dp"
            android:text="@string/later"
            android:textColor="@color/midnight_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_never"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="@dimen/margin16dp"
            android:text="@string/never"
            android:textColor="@color/midnight_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_rate_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="@dimen/margin16dp"
            android:text="@string/rate_us_now"
            android:textColor="@color/midnight_blue"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>